# execution-lab

./: .gitignore  Cargo.toml  Cargo.toml.bak_phase1_fix  Makefile  PHASE_TEN_SEALED.md  README.md  README_DEV.md  README_PROOF_PACK.md  README_RUNTIME.md  apply.sh  err_latest.sh  mkpatch.sh  run_app.sh  run_block.sh  tail_latest.sh
.github/workflows/: release.yml
adapters/: Cargo.toml
adapters/src/: binance_live.rs  contracts.rs  lib.rs
adapters/src/normalized/: mod.rs
adapters/src/seq/: mod.rs
adapters/src/wire/: binance.rs  mod.rs
adapters/tests/: binance_bbo.rs  binance_bbo_mux.rs  binance_live_smoke.rs
api/: Cargo.toml
api/src/: main.rs
app/: Cargo.toml
app/src/: cli.rs  config.rs  evidence.rs  exchange.rs  lib.rs  main.rs  md.rs  out.rs  redact.rs  run.rs
app/tests/: config_parse.rs
audit/: Cargo.toml
audit/src/: lib.rs
audit/tests/: chain.rs
bridge/: Cargo.toml
bridge/src/: adapter.rs
config/: elctl.toml
configs/: live_dryrun.toml  live_postonly.toml  replay.toml
connectors/: Cargo.toml
connectors/src/: binance.rs
contracts_bridge/: Cargo.toml
contracts_bridge/src/: lib.rs
core/: Cargo.toml
core/src/: error.rs  event.rs  lib.rs  time.rs
d2/: Cargo.toml
d2/src/: contracts_shadow.rs  fees.rs  lib.rs  multileg.rs  obs.rs  replay_ro.rs  signal.rs  spread.rs
d2/tests/: contracts_shadow_md.rs  full_flow.rs  pair_scan_golden_gas.rs  replay_ro_compile.rs  replay_ro_extract.rs  shadow_audit_event_compiles.rs  shadow_strategy_decision_compiles.rs  signal_basic.rs
demo/: README_DEMO.md  mk_bundle.py
docs/: ARCH.md  BUYER_QUICKSTART.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE_11_RELEASE_PIPELINE_SEALED.md  PHASE_13_UPDATE_FEED_SEALED.md  PHASE_14_REAL_CI_SIGNING_SEALED.md  PHASE_15_RELEASE_DRILL_SEALED.md  PHASE_16_REAL_RELEASE_PLAN.md  PHASE_7_INSTALLER_SEALED.md  PHASE_8_UPDATES_SEALED.md  PHASE_9_SIGNING_SEALED.md  REPRO.md  STATUS.md
el_app/: Cargo.toml
el_contracts/: Cargo.toml
el_contracts/src/: lib.rs
el_gui/: Cargo.toml
el_gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
el_gui/src-tauri/src/: lib.rs  main.rs
el_gui/ui/: index.html
el_obs/: Cargo.toml
el_obs/src/: contracts_shadow.rs  event.rs  lib.rs  sink.rs
el_obs/tests/: contracts_shadow_writer.rs  file_sink.rs
el_risk/: Cargo.toml
el_risk/src/: contract.rs  decision.rs  lib.rs  limits.rs
el_risk/tests/: smoke.rs
el_runtime/: Cargo.toml
el_runtime/src/: lib.rs  main.rs  product.rs  proof_pack.rs
el_runtime/tests/: product_config_parse.rs  product_smoke_replay.rs  proof_pack_smoke.rs
eventlog/: Cargo.toml
eventlog/src/: envelope.rs  error.rs  lib.rs  reader.rs  writer.rs
eventlog/src/hash/: mod.rs
eventlog/src/snapshot/: mod.rs
eventlog/tests/: snapshot.rs
exec/: Cargo.toml  PHASE_C_SEALED.md
exec-bridge/: Cargo.toml  README.md
exec-bridge/src/: adapter.rs
exec-bridge/tests/: adapter_test.rs
exec/src/: adapter.rs  event.rs  lib.rs  mock_adapter.rs  order_fsm.rs  order_fsm_error.rs  order_state.rs  risk_hook.rs
exec/src/events/: mod.rs  types.rs
exec/src/guard/: mod.rs
exec/src/io/: mod.rs  read_eventlog.rs
exec/src/order/: bridge.rs  bridge_tests.rs  events.rs  fold.rs  fold_error.rs  fold_tests.rs  fsm.rs  golden_tests.rs  mod.rs  snapshot.rs  snapshot_multi_tests.rs  snapshot_tests.rs  store.rs  store_tests.rs  types.rs
exec/src/util/: instrument.rs  mod.rs  stable_hash.rs
exec/tests/: adapter_smoke.rs  e2e_execengine_snapshot_from_eventlog.rs  eventlog_roundtrip.rs  exec_fixture_golden.rs  execution_golden.rs  execution_golden_hashes.txt  guard.rs  no_events_after_terminal.rs  order_fsm.rs  order_fsm_invalid.rs  risk_hook_smoke.rs  schema_eventlog_line_exec.rs  schema_exec_event.rs
exec/tests/data/: core_exec_golden.jsonl  exec_fixture_snapshot_hash.txt  schema_eventlog_line_exec.json  schema_exec_event.json
exec_engine/: Cargo.toml
exec_engine/src/: error.rs  lib.rs
exec_engine/tests/: crash_sim.rs  fill_id_invariant.rs  fills.rs  fsm_smoke.rs  golden_snapshot.rs  replay_e2e_snapshot_envelope.rs  schema_snapshot_envelope.rs  snapshot_envelope_roundtrip.rs  snapshot_hash_roundtrip.rs  store_contract.rs  transitions.rs
execution-bridge/: Cargo.toml  INVARIANTS.md
execution-bridge/src/: lib.rs
execution-bridge/tests/: crash_sim.rs  exactly_once.rs  restart_safe.rs
keys/: tauri_updater.key.pub
observability/: Cargo.toml
observability/src/: lib.rs
observability/tests/: init.rs
orderbook/: Cargo.toml
orderbook/src/: invariants.rs  lib.rs  state_hash.rs
patches/: 010_smoke_patch.sh  011_phase_c_lifecycle_polish.sh  012_phase_c_seal.sh  013_fix_terminal_invariant.sh  014_fix_terminal_guard_store.sh  014_fix_terminal_guard_store_correct.sh  014_terminal_guard_at_store.sh  015_fix_store_apply_and_view.sh  016_exec_event_bridge_fix.sh  017_core_exec_event_helpers.sh  017_revert_core_exec_helpers.sh  018_fix_core_event_strip_exec_helpers.sh  018_fix_exec_store_and_snapshot_types.sh  019_exec_to_fsm_adapter.sh  _smoke_ok.txt
replay/: Cargo.toml
replay/src/: lib.rs  main.rs  wire.rs
replay/src/decode/: from_wire.rs  mod.rs
replay/src/quality/: mod.rs  seq.rs  seq_test.rs
replay/src/state/: mod.rs
replay/tests/: bbo_replay_smoke.rs  binance_depth_fixture_smoke.rs  book_replay_golden.rs  commutativity.rs  e2e_execengine_snapshot_from_eventlog.rs  exec_events_golden.rs  gap.rs  golden.rs  golden_hashes.txt  guard.rs  live_equals_replay.rs  no_direct_core_event_writes.rs  raw_to_eventlog_smoke.rs  schema_eventlog_line_exec.rs  util.rs
replay/tests/data/: .gitignore  exec_events_hash.txt
risk/: Cargo.toml
risk/src/: lib.rs
risk/tests/: contract.rs
strategy/: Cargo.toml
strategy/src/: lib.rs  registry.rs
strategy_registry/: Cargo.toml
strategy_registry/src/: lib.rs
strategy_sdk/: Cargo.toml
tools/: Cargo.toml  gate.sh  level3_gate.sh  mk_synth_eventlog.py  phase11_gate.sh  phase13_gate.sh  phase14_gate.sh  phase15_gate.sh  phase16_gate.sh  phase7_gate.sh  phase8_gate.sh  phase9_gate.sh  quality_gate.sh  repro_baseline.sh  run_block.sh  run_level3_gate.sh
(+42 files in other folders)
