[workspace]
members = [
  "exec-bridge",
  "core",
  "connectors",
  "orderbook",
  "eventlog",
  "replay",
  "sim",
  "risk",
  "exec",
  "strategy",
  "api",
  "adapters",
  "execution-bridge",
  "observability",
  "audit", "el_contracts",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/hellaraze/execution-lab"

[workspace.dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting"] }
