[workspace]
members = [
  "core",
  "eventlog",
  "orderbook",
  "connectors",
  "replay",
  "sim",
  "exec_engine",
  "exec",
  "risk",
  "d2",
  "strategy_sdk",
  "strategy_registry",
  "strategy",
  "api",
  "adapters",
  "el_risk",
  "el_obs",
  "el_contracts",
  "contracts_bridge",
  "app",
  "el_runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/hellaraze/execution-lab"

[workspace.dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting"] }
