[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

connectors = { path = "../connectors" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"

adapters = { path = "../adapters" }
replay = { path = "../replay" }
exec = { path = "../exec" }
eventlog = { path = "../eventlog" }
serde_json = { workspace = true }
el_core = { path = "../core" }
uuid = { workspace = true }
