[package]
name = "elctl"
version = "0.1.0"
edition = "2021"

[dependencies]
el_runtime = { path = "../el_runtime" }
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
hex = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "execution-lab"
path = "src/bin/execution_lab.rs"
