[package]
name = "connectors"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
el_core = { path = "../core" }
eventlog = { path = "../eventlog" }
orderbook = { path = "../orderbook" }

uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

tokio = { version = "1", features = ["signal", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls","json"] }
