[package]
name = "d2"
version = "0.1.0"
edition = "2021"

[features]
default = []
replay-ro = ["el_core"]

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

eventlog = { path = "../eventlog" }
el_core = { path = "../core", optional = true }

[dev-dependencies]
approx = "0.5"
uuid = "1"
