[package]
name = "el_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ctrlc = "3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
hex = "0.4"
sha2 = "0.10"
toml = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
