[package]
name = "eventlog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fs2 = "0.4"
blake3 = "1"
el_core = { path = "../core" }
serde_json.workspace = true
thiserror.workspace = true

anyhow = "1"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
base64 = "0.22"
