[package]
name = "exec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uuid = { version = "1", features = ["v4"] }
el_core = { path = "../core" }
eventlog = { path = "../eventlog" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow = "1"
blake3 = "1.8.3"

[dev-dependencies]
