[package]
name = "exec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
el_risk = { path = "../el_risk" }
el_obs = { path = "../el_obs" }
serde = { workspace = true, features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
replay = { path = "../replay" }
el_core = { path = "../core" }
eventlog = { path = "../eventlog" }
serde_json.workspace = true
thiserror.workspace = true
anyhow = "1"
blake3 = "1.8.3"

[dev-dependencies]
exec_engine = { path = "../exec_engine" }
