[package]
name = "replay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
el_core = { path = "../core" }
eventlog = { path = "../eventlog" }
orderbook = { path = "../orderbook" }

anyhow = "1"
blake3 = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4","v5"] }
rand = "0.8"

[dev-dependencies]
exec = { path = "../exec" }
exec_engine = { path = "../exec_engine" }
