[package]
name = "strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
d2 = { path = "../d2", features = ["replay-ro"] }
eventlog = { path = "../eventlog" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
el_core = { path = "../core" }
strategy_registry = { path = "../strategy_registry" }
strategy_sdk = { path = "../strategy_sdk" }
