[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
path = "src/lib.rs"

[[bin]]
name = "app-bin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "sync"] }

[workspace]
